k8s/monitoring/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  parentRefs:
    - name: monitoring
      sectionName: https
  hostnames:
    - grafana.tlecuyer.codes
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: monitoring-grafana
          port: 80
